# se-toolkit-hackathon

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py  settings.py
backend/app/models/: __init__.py  cocktail.py  user.py
backend/app/routers/: __init__.py  cocktails.py  favorites.py  history.py  users.py
backend/app/services/: __init__.py  cocktail_api.py  cocktail_db.py
backend/tests/: test_cocktail_api_service.py  test_routes.py
bot/: Dockerfile  bot.py  config.py  pyproject.toml
bot/handlers/: commands.py  messages.py
bot/services/: __init__.py  backend_client.py  formatter.py  intent.py  llm_client.py
bot/tests/: test_formatter.py  test_intent.py
docs/screenshots/: .gitkeep
frontend/: Dockerfile  nginx.conf
frontend/client/: index.html
frontend/client/src/: App.tsx  index.css
frontend/client/src/components/: auth-guard.tsx  cocktail-card.tsx  cocktail-detail.tsx  sidebar.tsx
frontend/client/src/lib/: api.ts  auth-context.tsx
frontend/client/src/pages/: favorites.tsx  history.tsx  home.tsx  login.tsx  register.tsx
frontend/shared/: schema.ts
scripts/: run_local.sh
